bee-common/bee-packable-derive/tests/fail/missing_discriminant.stderr
error: All variants of an enum that derives `Packable` require a `#[packable(tag = ...)]` attribute.
  --> $DIR/missing_discriminant.rs:13:5
   |
13 |     C,
   |     ^
